// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > aave-delegate-alignment 1`] = `
{
  "_meta": {
    "confirmed": true,
    "derived_through": "<datetime>",
  },
  "focal_delegate": {
    "actor_id": "00000000-0000-0000-aaaa-000000000021",
    "address": "0xa0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0",
    "display_name": "Aave Voter",
  },
  "pagination": {
    "has_more": false,
    "limit": 50,
    "next_cursor": null,
  },
  "peers": [],
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > aave-delegation-flow 1`] = `
{
  "_meta": {
    "confirmed": true,
    "derived_through": null,
  },
  "edges": [],
  "nodes": [],
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > aave-proposal-detail 1`] = `
{
  "data": {
    "_meta": {
      "confirmed": true,
      "last_updated_at": "2026-01-15T12:00:00Z",
      "links": {
        "self": "/v1/daos/aave/proposals/aave_governance_v3/1",
        "votes": "/v1/daos/aave/proposals/aave_governance_v3/1/votes",
      },
    },
    "actions": [],
    "binding": true,
    "choices": [
      {
        "choice_index": 0,
        "value": "Against",
      },
      {
        "choice_index": 1,
        "value": "For",
      },
      {
        "choice_index": 2,
        "value": "Abstain",
      },
    ],
    "dao_slug": "aave",
    "description": "A v3 governance proposal",
    "forum_links": [],
    "metadata": null,
    "origin_chain_id": "0x1",
    "payloads": [
      {
        "payloads": [
          {
            "executed_at_destination": "2026-01-16T00:00:00Z",
            "payload_id": "42",
            "payload_index": 0,
            "payloads_controller_address": "0xffffffffffffffffffffffffffffffffffffffff",
            "status": "executed",
            "unindexed_target_chain": false,
          },
        ],
        "target_chain_id": "0x1",
      },
      {
        "payloads": [
          {
            "executed_at_destination": null,
            "payload_id": "7",
            "payload_index": 1,
            "payloads_controller_address": "0xfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfd",
            "status": "queued",
            "unindexed_target_chain": false,
          },
        ],
        "target_chain_id": "0x89",
      },
    ],
    "proposer": {
      "address": "0xc0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0",
      "display_name": null,
    },
    "source_id": "1",
    "source_type": "aave_governance_v3",
    "state": "executed",
    "title": "Aave v3 Test Proposal",
    "voting": {
      "creation_block": "19900000",
      "voting_chain_id": "0x89",
      "voting_machine_address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      "voting_strategy_address": null,
    },
    "voting_ends_at": "2026-01-14T00:00:00Z",
    "voting_starts_at": "2026-01-10T00:00:00Z",
  },
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > aave-proposal-pass-rate 1`] = `
{
  "_meta": {
    "confirmed": true,
    "derived_through": null,
  },
  "data": [
    {
      "bucket": "2025-11-01T00:00:00Z",
      "failed": 0,
      "pass_rate": 1,
      "passed": 1,
      "source_type": "aave_governor_v2",
    },
    {
      "bucket": "2026-01-01T00:00:00Z",
      "failed": 0,
      "pass_rate": 1,
      "passed": 1,
      "source_type": "aave_governance_v3",
    },
  ],
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > aave-proposals-list 1`] = `
{
  "data": [
    {
      "_meta": {
        "confirmed": true,
        "last_updated_at": "2026-01-15T12:00:00Z",
        "links": {
          "self": "/v1/daos/aave/proposals/aave_governance_v3/1",
          "votes": "/v1/daos/aave/proposals/aave_governance_v3/1/votes",
        },
      },
      "binding": true,
      "dao_slug": "aave",
      "proposer": {
        "address": "0xc0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0",
        "display_name": null,
      },
      "source_id": "1",
      "source_type": "aave_governance_v3",
      "state": "executed",
      "title": "Aave v3 Test Proposal",
      "voting_ends_at": "2026-01-14T00:00:00Z",
      "voting_starts_at": "2026-01-10T00:00:00Z",
    },
    {
      "_meta": {
        "confirmed": true,
        "last_updated_at": "2025-12-06T00:00:00Z",
        "links": {
          "self": "/v1/daos/aave/proposals/aave_governor_v2/100",
          "votes": "/v1/daos/aave/proposals/aave_governor_v2/100/votes",
        },
      },
      "binding": true,
      "dao_slug": "aave",
      "proposer": {
        "address": "0xc0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0",
        "display_name": null,
      },
      "source_id": "100",
      "source_type": "aave_governor_v2",
      "state": "executed",
      "title": "Aave v2 Test Proposal",
      "voting_ends_at": "2025-12-05T00:00:00Z",
      "voting_starts_at": "2025-12-01T00:00:00Z",
    },
  ],
  "pagination": {
    "has_more": false,
    "limit": 50,
    "next_cursor": null,
  },
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > actor-detail 1`] = `
{
  "data": {
    "actor_id": "00000000-0000-0000-0000-000000000333",
    "all_addresses": [
      {
        "address": "0xaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        "is_primary": true,
        "source": "m1_backfill",
      },
    ],
    "display_name": null,
    "primary_address": "0xaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  },
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > compound-proposal-pass-rate 1`] = `
{
  "_meta": {
    "confirmed": true,
    "derived_through": null,
  },
  "data": [
    {
      "bucket": "2026-05-01T00:00:00Z",
      "failed": 0,
      "pass_rate": 1,
      "passed": 1,
      "source_type": "compound_governor_bravo",
    },
  ],
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > cross-dao-proposals 1`] = `
{
  "data": [
    {
      "_meta": {
        "confirmed": true,
        "last_updated_at": "2026-05-15T18:30:00Z",
        "links": {
          "self": "/v1/daos/compound/proposals/compound_governor_bravo/44",
          "votes": "/v1/daos/compound/proposals/compound_governor_bravo/44/votes",
        },
      },
      "binding": true,
      "dao_slug": "compound",
      "proposer": {
        "address": "0xbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
        "display_name": "Second Proposer",
      },
      "source_id": "44",
      "source_type": "compound_governor_bravo",
      "state": "active",
      "title": "Paged proposal",
      "voting_ends_at": "2026-05-16T18:00:00Z",
      "voting_starts_at": "2026-05-15T18:00:00Z",
    },
    {
      "_meta": {
        "confirmed": true,
        "last_updated_at": "2026-05-15T17:00:00Z",
        "links": {
          "self": "/v1/daos/compound/proposals/compound_governor_bravo/43",
          "votes": "/v1/daos/compound/proposals/compound_governor_bravo/43/votes",
        },
      },
      "binding": false,
      "dao_slug": "compound",
      "proposer": {
        "address": "0xaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        "display_name": null,
      },
      "source_id": "43",
      "source_type": "compound_governor_bravo",
      "state": "pending",
      "title": null,
      "voting_ends_at": null,
      "voting_starts_at": null,
    },
    {
      "_meta": {
        "confirmed": true,
        "last_updated_at": "2026-05-15T16:00:00Z",
        "links": {
          "self": "/v1/daos/compound/proposals/compound_governor_bravo/42",
          "votes": "/v1/daos/compound/proposals/compound_governor_bravo/42/votes",
        },
      },
      "binding": true,
      "dao_slug": "compound",
      "proposer": {
        "address": "0xaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        "display_name": null,
      },
      "source_id": "42",
      "source_type": "compound_governor_bravo",
      "state": "executed",
      "title": "Executed proposal",
      "voting_ends_at": "2026-05-15T15:00:00Z",
      "voting_starts_at": "2026-05-15T09:00:00Z",
    },
  ],
  "pagination": {
    "has_more": false,
    "limit": 50,
    "next_cursor": null,
  },
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > cross-dao-proposals-multi 1`] = `
{
  "data": [
    {
      "_meta": {
        "confirmed": true,
        "last_updated_at": "2026-05-15T18:30:00Z",
        "links": {
          "self": "/v1/daos/compound/proposals/compound_governor_bravo/44",
          "votes": "/v1/daos/compound/proposals/compound_governor_bravo/44/votes",
        },
      },
      "binding": true,
      "dao_slug": "compound",
      "proposer": {
        "address": "0xbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
        "display_name": "Second Proposer",
      },
      "source_id": "44",
      "source_type": "compound_governor_bravo",
      "state": "active",
      "title": "Paged proposal",
      "voting_ends_at": "2026-05-16T18:00:00Z",
      "voting_starts_at": "2026-05-15T18:00:00Z",
    },
    {
      "_meta": {
        "confirmed": true,
        "last_updated_at": "2026-05-15T17:00:00Z",
        "links": {
          "self": "/v1/daos/compound/proposals/compound_governor_bravo/43",
          "votes": "/v1/daos/compound/proposals/compound_governor_bravo/43/votes",
        },
      },
      "binding": false,
      "dao_slug": "compound",
      "proposer": {
        "address": "0xaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        "display_name": null,
      },
      "source_id": "43",
      "source_type": "compound_governor_bravo",
      "state": "pending",
      "title": null,
      "voting_ends_at": null,
      "voting_starts_at": null,
    },
    {
      "_meta": {
        "confirmed": true,
        "last_updated_at": "2026-05-15T16:00:00Z",
        "links": {
          "self": "/v1/daos/compound/proposals/compound_governor_bravo/42",
          "votes": "/v1/daos/compound/proposals/compound_governor_bravo/42/votes",
        },
      },
      "binding": true,
      "dao_slug": "compound",
      "proposer": {
        "address": "0xaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        "display_name": null,
      },
      "source_id": "42",
      "source_type": "compound_governor_bravo",
      "state": "executed",
      "title": "Executed proposal",
      "voting_ends_at": "2026-05-15T15:00:00Z",
      "voting_starts_at": "2026-05-15T09:00:00Z",
    },
    {
      "_meta": {
        "confirmed": true,
        "last_updated_at": "2026-01-15T12:00:00Z",
        "links": {
          "self": "/v1/daos/aave/proposals/aave_governance_v3/1",
          "votes": "/v1/daos/aave/proposals/aave_governance_v3/1/votes",
        },
      },
      "binding": true,
      "dao_slug": "aave",
      "proposer": {
        "address": "0xc0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0",
        "display_name": null,
      },
      "source_id": "1",
      "source_type": "aave_governance_v3",
      "state": "executed",
      "title": "Aave v3 Test Proposal",
      "voting_ends_at": "2026-01-14T00:00:00Z",
      "voting_starts_at": "2026-01-10T00:00:00Z",
    },
    {
      "_meta": {
        "confirmed": true,
        "last_updated_at": "2025-12-06T00:00:00Z",
        "links": {
          "self": "/v1/daos/aave/proposals/aave_governor_v2/100",
          "votes": "/v1/daos/aave/proposals/aave_governor_v2/100/votes",
        },
      },
      "binding": true,
      "dao_slug": "aave",
      "proposer": {
        "address": "0xc0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0",
        "display_name": null,
      },
      "source_id": "100",
      "source_type": "aave_governor_v2",
      "state": "executed",
      "title": "Aave v2 Test Proposal",
      "voting_ends_at": "2025-12-05T00:00:00Z",
      "voting_starts_at": "2025-12-01T00:00:00Z",
    },
  ],
  "pagination": {
    "has_more": false,
    "limit": 50,
    "next_cursor": null,
  },
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > dao-detail 1`] = `
{
  "data": {
    "_meta": {
      "last_updated_at": "2026-05-16T10:00:00Z",
      "links": {
        "self": "/v1/daos/compound",
      },
    },
    "description": "Compound DAO",
    "forum_url": "https://www.comp.xyz",
    "name": "Compound",
    "primary_chain_id": "1",
    "primary_token_address": "0xcccccccccccccccccccccccccccccccccccccccc",
    "slug": "compound",
    "sources": [
      {
        "config": {
          "contract_address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
        },
        "source_type": "alt_governor",
      },
      {
        "config": {
          "chain_id": "0x1",
          "contract_address": "0xdddddddddddddddddddddddddddddddddddddddd",
        },
        "source_type": "compound_governor_bravo",
      },
    ],
    "website_url": "https://compound.finance",
  },
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > dao-proposals-list 1`] = `
{
  "data": [
    {
      "_meta": {
        "confirmed": true,
        "last_updated_at": "2026-05-15T18:30:00Z",
        "links": {
          "self": "/v1/daos/compound/proposals/compound_governor_bravo/44",
          "votes": "/v1/daos/compound/proposals/compound_governor_bravo/44/votes",
        },
      },
      "binding": true,
      "dao_slug": "compound",
      "proposer": {
        "address": "0xbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
        "display_name": "Second Proposer",
      },
      "source_id": "44",
      "source_type": "compound_governor_bravo",
      "state": "active",
      "title": "Paged proposal",
      "voting_ends_at": "2026-05-16T18:00:00Z",
      "voting_starts_at": "2026-05-15T18:00:00Z",
    },
    {
      "_meta": {
        "confirmed": true,
        "last_updated_at": "2026-05-15T17:00:00Z",
        "links": {
          "self": "/v1/daos/compound/proposals/compound_governor_bravo/43",
          "votes": "/v1/daos/compound/proposals/compound_governor_bravo/43/votes",
        },
      },
      "binding": false,
      "dao_slug": "compound",
      "proposer": {
        "address": "0xaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        "display_name": null,
      },
      "source_id": "43",
      "source_type": "compound_governor_bravo",
      "state": "pending",
      "title": null,
      "voting_ends_at": null,
      "voting_starts_at": null,
    },
    {
      "_meta": {
        "confirmed": true,
        "last_updated_at": "2026-05-15T16:00:00Z",
        "links": {
          "self": "/v1/daos/compound/proposals/compound_governor_bravo/42",
          "votes": "/v1/daos/compound/proposals/compound_governor_bravo/42/votes",
        },
      },
      "binding": true,
      "dao_slug": "compound",
      "proposer": {
        "address": "0xaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        "display_name": null,
      },
      "source_id": "42",
      "source_type": "compound_governor_bravo",
      "state": "executed",
      "title": "Executed proposal",
      "voting_ends_at": "2026-05-15T15:00:00Z",
      "voting_starts_at": "2026-05-15T09:00:00Z",
    },
  ],
  "pagination": {
    "has_more": false,
    "limit": 50,
    "next_cursor": null,
  },
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > dao-sources 1`] = `
{
  "data": [
    {
      "config": {
        "contract_address": "0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee",
      },
      "source_type": "alt_governor",
    },
    {
      "config": {
        "chain_id": "0x1",
        "contract_address": "0xdddddddddddddddddddddddddddddddddddddddd",
      },
      "source_type": "compound_governor_bravo",
    },
  ],
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > daos-list 1`] = `
{
  "data": [
    {
      "_meta": {
        "last_updated_at": "2026-01-15T12:00:00Z",
        "links": {
          "self": "/v1/daos/aave",
        },
      },
      "description": "Aave DAO (e2e)",
      "forum_url": "https://governance.aave.com",
      "name": "Aave",
      "primary_chain_id": "1",
      "primary_token_address": "0x7fc66500c84a76ad7e9c93437bfc5ac33e2ddae9",
      "slug": "aave",
      "website_url": "https://aave.com",
    },
    {
      "_meta": {
        "last_updated_at": "2026-05-16T10:00:00Z",
        "links": {
          "self": "/v1/daos/compound",
        },
      },
      "description": "Compound DAO",
      "forum_url": "https://www.comp.xyz",
      "name": "Compound",
      "primary_chain_id": "1",
      "primary_token_address": "0xcccccccccccccccccccccccccccccccccccccccc",
      "slug": "compound",
      "website_url": "https://compound.finance",
    },
  ],
  "pagination": {
    "has_more": false,
    "limit": 50,
    "next_cursor": null,
  },
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > etag-by-endpoint 1`] = `
{
  "aave-concentration": null,
  "aave-delegate-alignment": null,
  "aave-delegation-flow": ""7E6lin7FRPEAF115ug5y1Pv2KXI"",
  "aave-proposal-detail": ""0rND17hBIrkueSaU68Ew0XygJtw"",
  "aave-proposal-pass-rate": ""e8tZWKBZnqCfeOha5WZiLMtf28I"",
  "aave-proposals-list": ""6VNz40HEqnp73-lX-YTeM_ayZdQ"",
  "actor-detail": ""U-bR9ji1MIJNuJLIjy3NlSWw1Vo"",
  "compound-proposal-pass-rate": ""OyYzMyAo8QXs3BZnj2YUzhj2RJg"",
  "cross-dao-proposals": ""PpdjFk0-1xI6wACRVG_iNsVe-ow"",
  "cross-dao-proposals-multi": ""1JyV4opb7TzGUwIn6Q4L5wPNDH8"",
  "dao-detail": ""CcdwyOfS_wsLve8ERvMCWW5bAx4"",
  "dao-proposals-list": ""PpdjFk0-1xI6wACRVG_iNsVe-ow"",
  "dao-sources": ""lHkveUj1_T9XP9b3L7wyayzxv8k"",
  "daos-list": ""UCRJDY9f6hfyOYGiDB36sDVrxo8"",
  "proposal-detail": ""phHjs3alVp5kN17myK43GddY5-M"",
}
`;

exports[`M1 H6 conformance baseline e2e > pins body shape snapshots and etag snapshots for all six endpoints > proposal-detail 1`] = `
{
  "data": {
    "_meta": {
      "confirmed": true,
      "last_updated_at": "2026-05-15T16:00:00Z",
      "links": {
        "self": "/v1/daos/compound/proposals/compound_governor_bravo/42",
        "votes": "/v1/daos/compound/proposals/compound_governor_bravo/42/votes",
      },
    },
    "actions": [
      {
        "action_index": 0,
        "calldata": "0x1234",
        "decoded_arguments": {
          "value": "1",
        },
        "decoded_function": "setParameter",
        "function_signature": "setParameter(uint256)",
        "target_address": "0xffffffffffffffffffffffffffffffffffffffff",
        "target_chain_id": "1",
        "value_wei": "0",
      },
      {
        "action_index": 1,
        "calldata": "0xabcd",
        "decoded_arguments": null,
        "decoded_function": null,
        "function_signature": null,
        "target_address": "0x1111111111111111111111111111111111111111",
        "target_chain_id": "1",
        "value_wei": "42",
      },
    ],
    "binding": true,
    "choices": [
      {
        "choice_index": 0,
        "value": "Against",
      },
      {
        "choice_index": 1,
        "value": "For",
      },
      {
        "choice_index": 2,
        "value": "Abstain",
      },
    ],
    "dao_slug": "compound",
    "description": "Executed proposal body",
    "forum_links": [],
    "metadata": null,
    "origin_chain_id": "0x1",
    "proposer": {
      "address": "0xaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      "display_name": null,
    },
    "source_id": "42",
    "source_type": "compound_governor_bravo",
    "state": "executed",
    "title": "Executed proposal",
    "voting_ends_at": "2026-05-15T15:00:00Z",
    "voting_starts_at": "2026-05-15T09:00:00Z",
  },
}
`;
